--- a/src/app/country-details/country-details.component.html
+++ b/src/app/country-details/country-details.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="country" class="moreInfoParent">
-  <a routerLink=""><i class="fa-solid fa-arrow-left"></i> Back</a>
+<div *ngIf="country" class="moreInfoParent"  [class.darkTheme]="darkTheme">
+  <a routerLink="" [class.darkTheme]="darkTheme"><i class="fa-solid fa-arrow-left"></i> Back</a>
   <section class="moreInfo">
     <div class="leftInfo">
       <img [src]="country.flags.svg" alt="Flag">
@@ -10,16 +10,16 @@
       </div>
       <div class="rightInfoContent">
         <div class="rightInfoContent__leftSide">
-          <p>Native Name: {{ country.nativeName }}</p>
-          <p>Population: {{ country.population }}</p>
-          <p>Region: {{ country.region }}</p>
-          <p>Sub Region: {{ country.subregion }}</p>
-          <p>Capital: {{ country.capital }}</p>
+          <p><span>Native Name:</span>  {{ country.nativeName }}</p>
+          <p><span>Population:</span>  {{ country.population }}</p>
+          <p><span>Region:</span>  {{ country.region }}</p>
+          <p><span>Sub Region:</span>  {{ country.subregion }}</p>
+          <p><span>Capital:</span>  {{ country.capital }}</p>
         </div>
         <div class="rightInfoContent__rightSide">
-          <p>Top Level Domain: {{ country.topLevelDomain }}</p>
-          <p>Currencies: {{ country.currencies[0]?.code }}</p>
-          <p>Languages: <span *ngFor="let language of country?.languages; let isLast = last">
+          <p><span>Top Level Domain:</span>  {{ country.topLevelDomain }}</p>
+          <p><span>Currencies:</span>  {{ country.currencies[0]?.code }}</p>
+          <p><span>Languages:</span>  <span *ngFor="let language of country?.languages; let isLast = last">
             {{ language.name }}{{ isLast ? '' : ', ' }}
           </span></p>
         </div>
