--- a/src/app/country-details/country-details.component.scss
+++ b/src/app/country-details/country-details.component.scss
@@ -16,9 +16,17 @@
     justify-content: space-evenly;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.197);
     border-radius: 5px;
+    &.darkTheme {
+      background-color: #2B3743;
+      color: white;
+    }
     i {
       font-size: 14px;
     }
+  }
+  &.darkTheme {
+    background-color: #212E37;
+    color: white;
   }
   .moreInfo {
     display: flex;
@@ -43,6 +51,18 @@
         font-size: 20px;
         width: max-content;
         gap: 85px;
+
+        span {
+          font-weight: 700;
+        }
+
+        &__rightSide {
+          p:last-child {
+            span:last-child {
+              font-weight: 400;
+            }
+          }
+        }
       }
     }
   }
