--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header [class.darkTheme]="darkTheme">
   <a routerLink=""><h1>Where in the world?</h1></a>
-  <a href=""><p><i class="fa-regular fa-moon"></i>Dark Mode</p></a>
+  <button (click)="darkThemeToggle()"><i class="fa-regular fa-moon"></i>Dark Mode</button>
 </header>
