--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,15 @@
-<section class="search">
+<section class="search"  [class.darkTheme]="darkTheme">
   <div>
-    <input type="text" placeholder="Search for a country..." [(ngModel)]="searchText">
+    <input [class.darkTheme]="darkTheme" type="text" placeholder="Search for a country..." [(ngModel)]="searchText">
   </div>
 
-  <div class="filter">
-    <div class="selected-option" (click)="toggleDropdown()">
+  <div class="filter" [class.darkTheme]="darkTheme">
+    <div class="selected-option" (click)="toggleDropdown()" [class.darkTheme]="darkTheme">
       <p>{{ selectedOption !== 'All' ? selectedOption : 'Filter by Region' }}</p>
-      <span class="arrow" [ngClass]="{'open': isOpen}"></span>
+      <span [class.darkTheme]="darkTheme" class="arrow" [ngClass]="{'open': isOpen}"></span>
     </div>    
-    <ul class="dropdown" *ngIf="isOpen">
-      <li *ngFor="let option of options" (click)="selectOption(option)">
+    <ul class="dropdown" *ngIf="isOpen" [class.darkTheme]="darkTheme">
+      <li [class.darkTheme]="darkTheme" *ngFor="let option of options" (click)="selectOption(option)">
         {{ option }}
       </li>
     </ul>
@@ -17,8 +17,8 @@
   
 </section>
 
-<section class="countries">
-  <div class="mainContainer" *ngFor="let country of filteredCountries" (click)="openCountryDetails(country)">
+<section class="countries" [class.darkTheme]="darkTheme">
+  <div [class.darkTheme]="darkTheme" class="mainContainer" *ngFor="let country of filteredCountries" (click)="openCountryDetails(country)">
     <img [src]="country.flags?.svg" alt="">
     <h1>{{ country.name }}</h1>
     <p><span>Population: </span>{{ country.population }}</p>
