--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,10 +1,15 @@
 .countries {
-  background-color: hsl(0, 0%, 98%);
+  background-color: rgb(250, 250, 250);
   width: 100%;
-  height: max-content;
+  min-height: calc(100vh - 213px);
+  max-height: max-content;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  &.darkTheme {
+    background-color: #202D36;
+  }
 
   .mainContainer {
     background-color: white;
@@ -17,6 +22,11 @@
     margin: 3%;
     cursor: pointer;
     box-shadow: -1px 5px 13px 0px rgba(0, 0, 0, 0.05);
+
+    &.darkTheme {
+      background-color: #2B3743;
+      color: white;
+    }
 
     &:hover {
       box-shadow: -1px 5px 13px 0px rgba(0, 0, 0, 0.01);
@@ -59,7 +69,11 @@
 .search {
   display: flex;
   justify-content: space-between;
-  margin: 3% 10% 0 10%;
+  padding: 3% 10% 0 10%;
+
+  &.darkTheme {
+    background-color: #202D36;
+  }
 
   input { 
     width: 450px;
@@ -70,20 +84,37 @@
     box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.129);
     outline: none;
     font-size: 17px;
-  }
 
-  select {
-    width: 160px;
-    height: 60px;
-    text-indent: 15px;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.129);
-    outline: none;
-    font-size: 17px;
-    background-color: white;
-    background-position: right center;
-    background-repeat: no-repeat;
+    &::placeholder {
+      color: black;
+      opacity: 1;
+    }
+    
+    &:-ms-input-placeholder {
+      color: black;
+    }
+    
+    &::-ms-input-placeholder {
+      color: black;
+    }
+
+    &.darkTheme {
+      background-color: #2B3743;
+      color: white;
+
+      &::placeholder {
+        color: white;
+        opacity: 1;
+      }
+      
+      &:-ms-input-placeholder {
+        color: white;
+      }
+      
+      &::-ms-input-placeholder {
+        color: white;
+      }
+    }
   }
 
   .filter {
@@ -107,6 +138,10 @@
       justify-content: center;
       align-items: center;
       margin-bottom: 20px;
+      &.darkTheme {
+        background-color: #2B3743;
+        color: white;
+      }
   
       p {
         margin-right: 10px;
@@ -119,11 +154,24 @@
         padding: 3px;
         transform: rotate(45deg);
         transition: all 0.3s ease;
+        &.darkTheme {
+          border: solid white;
+          border-width: 0 2px 2px 0;
+          display: inline-block;
+          padding: 3px;
+          transform: rotate(45deg);
+          transition: all 0.3s ease;
+        }
       }
       
       .open {
         transform: rotate(-135deg);
         margin-top: 5px;
+
+        &.darkTheme {
+          transform: rotate(-135deg);
+          margin-top: 5px;
+        }
       }
     }
 
@@ -142,6 +190,10 @@
       background-color: white;
       background-position: right center;
       background-repeat: no-repeat;
+      &.darkTheme {
+        background-color: #2B3743;
+        color: white;
+      }
 
       li {
         padding: 10px;
@@ -150,6 +202,13 @@
         &:hover {
           background-color: #f0f0f0;
           border-radius: 10px;
+        }
+
+        &.darkTheme {
+          &:hover {
+            background-color: #222222;
+            border-radius: 10px;
+          }
         }
       }
     }
