--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,22 @@ body {
   height: 100vh;
   background-color: #fafafa;
 }
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #8a8a8a #ffffff;
+}
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #dddddd;
+  border-radius: 15px;
+  border: 0px solid #ffffff;
+}
