--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,5 +1,6 @@
 
 <section class="container forms" [class.darkTheme]="darkTheme">
+    <a (click)="goBack()" [class.darkTheme]="darkTheme" class="back"><i class="fa-solid fa-arrow-left"></i> Back</a>
     <div class="form login" [class.darkTheme]="darkTheme">
         <div class="form-content">
             <header [class.darkTheme]="darkTheme">Login</header>
