--- a/src/app/country-details/country-details.component.scss
+++ b/src/app/country-details/country-details.component.scss
@@ -16,6 +16,7 @@
     justify-content: space-evenly;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.197);
     border-radius: 5px;
+    cursor: pointer;
     &.darkTheme {
       background-color: #2B3743;
       color: white;
@@ -38,6 +39,7 @@
       height: max-content;
       img {
         width: 550px;
+        margin-right: 20px;
       }
     }
 
@@ -81,6 +83,7 @@
       .leftInfo {
         img {
           width: 400px;
+          margin-right: 0;
         }
       }
     }
@@ -90,21 +93,15 @@
 @media only screen and (max-width: 600px) {
   .moreInfoParent {
     .moreInfo {
-      display: flex;
-      align-items: center;
-      margin: 0;
-      flex-direction: column;
       height: 597px;
       justify-content: center;
 
       .rightInfo {
         .rightInfoContent {
-          height: 135px;
-          display: flex;
           font-size: 17px;
-          width: max-content;
-          gap: 0;
           flex-direction: column;
+          gap: 0;
+          width: max-content;
         }
       }
 
@@ -120,20 +117,8 @@
 @media only screen and (max-width: 300px) {
   .moreInfoParent {
     .moreInfo {
-      display: flex;
-      align-items: center;
-      margin: 0;
-      flex-direction: column;
-      height: 597px;
-      justify-content: center;
-
       .rightInfo {
         .rightInfoContent {
-          height: 135px;
-          display: flex;
-          width: max-content;
-          gap: 0;
-          flex-direction: column;
           font-size: 15px;
         }
       }
