--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -5,9 +5,35 @@
     align-items: center;
     justify-content: center;
     column-gap: 30px;
+    position: relative;
 
     &.darkTheme {
         background-color: #202D36;
+    }
+
+    .back {
+        position: absolute;
+        top: 5%;
+        left: 3%;
+        width: 100px;
+        height: 35px;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.197);
+        border-radius: 5px;
+        &.darkTheme {
+            background-color: #2B3743;
+            color: white;
+        }
+        i {
+            font-size: 14px;
+        }
+    }
+
+    a {
+        cursor: pointer;
     }
 }
 .form{
