--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,14 @@
 <header [class.darkTheme]="darkTheme">
   <a routerLink=""><h1>Where in the world?</h1></a>
   <div class="userAndTheme">
-    <button routerLink="/login" *ngIf="!userService.isLoggedIn.getValue()">
+    <button routerLink="/login" *ngIf="!userService.isLoggedIn.getValue()" class="login">
       <i class="fa-solid fa-right-to-bracket"></i>
       LogIn
     </button>
 
     <div class="menu-container" *ngIf="isLoggedIn || userService.isLoggedIn.getValue()">
       <img src="../../assets/user.svg" alt="" (click)="toggleMenu()">
-      <ul class="menu" *ngIf="showMenu" [class.darkTheme]="darkTheme">
+      <ul class="menu" *ngIf="isOpen" [class.darkTheme]="darkTheme">
         <li (click)="signOut()">Sign Out</li>
       </ul>
     </div>
